Fixed: Avoid wrap of History actions

--- a/frontend/src/History/HistoryRow.css
+++ b/frontend/src/History/HistoryRow.css
@@ -31,5 +31,5 @@
 .details {
   composes: cell from '~Components/Table/Cells/TableRowCell.css';
 
-  width: 30px;
+  width: 70px;
 }
